<resources>
    <string name="app_name">WorkoutRoutine</string>
    <string name="body_fragment">Body Fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="body">Body</string>
    <string name="workout">Workout</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="workout_menu">workout menu</string>
    <string name="workout_navigate">workout navigate</string>
    <string name="workouts">Workouts</string>
    <string name="archive">Archive</string>
    <string name="import_export">Import/Export</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu">menu</string>
    <string name="add_new_workout">Add new workout</string>
    <string name="delete_workout">Are you sure to you want to delete this workout?</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_previous_page">Back to previous page.</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="type_exercise_name">Exercise name</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="based_on_set">Based on set</string>
    <string name="based_on_time">Based on time</string>
    <string name="based_on_set_description">You can save <font color='#76efca'>reps</font>, <font color='#76efca'>weight</font>,
        <font color='#76efca'>rest</font>, values in your exercise set.</string>
    <string name="based_on_time_description">You can save <font color='#76efca'>time</font> values in your exercise set.</string>
    <string name="accept">ACCEPT</string>
    <string name="exercise_1">Exercise 1</string>
</resources>