<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/delete_workout_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_workout"
        android:fontFamily="@font/rubik_regular"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/cancel"
        android:textColor="@color/colorSecondaryVariant"
        android:fontFamily="@font/rubik_regular"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/delete_workout_message"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/delete"
        android:textColor="@color/colorSecondaryVariant"
        android:fontFamily="@font/rubik_regular"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/delete_workout_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>